--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
     <div class="container">
         <header>
             <div class="img-wrapper">
-                <img src="" alt="">
+                <img src="imagens/bg.jpg" alt="">
             </div>
-            <h1>Web Developer & Front End Designer</h1>
-            <p>Lucas Meira</p>
-            <button>Saiba Mais</button>
+            <div class="banner">
+                <h1>Web Developer & Front End Designer</h1>
+                <p>Lucas Meira</p>
+                <button>Saiba Mais</button>
+            </div>
         </header>
 
     </div>
