--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <div class="line" id="line1"></div>
             <div class="line" id="line2"></div>
             <div class="line" id="line3"></div>
+            <span>fechar</span>
         </div>
 
 
@@ -32,25 +33,158 @@
             </div>
         </header>
 
-        <div class="sidebar">
+        <aside class="sidebar">
             <nav>
                 <ul class="menu">
                     <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
                     <li class="menu-item"><a href="#" class="menu-link">Conhecimento</a></li>
                     <li class="menu-item"><a href="#" class="menu-link">Projetos</a></li>
                     <li class="menu-item"><a href="#" class="menu-link">Contato</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">Orcamento</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Orçamento</a></li>
                 </ul>
             </nav>
             <div class="social-media">
-                <a href="#"><i class="fab fa-facebook"></i></a>
+                <a href="#"><i class="fab fa-linkedin"></i></a>
                 <a href="#"><i class="fab fa-github"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
             </div>
-        </div>
+        </aside>
+
+        <section class="sessao-conhecimentos" id="conhecimentos">
+            <div class="sessao-header">
+              <h1>Conhecimentos</h1>
+            </div>
+            <div class="conhecimentos">
+              <div class="conhecimento">
+                <div class="conhecimento-header">
+                  <i class="fab fa-html5"></i>
+                  <h3>HTML</h3>
+                </div>
+                <div class="conhecimento-text">
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui vel obcaecati eaque quos, labore quibusdam incidunt dolores vitae velit voluptates esse omnis enim, dolorem eveniet. Rem ab obcaecati totam ipsum!</p>
+                </div>
+              </div>
+              <div class="conhecimento">
+                <div class="conhecimento-header">
+                  <i class="fab fa-css3-alt"></i>
+                  <h3>CSS</h3>
+                </div>
+                <div class="conhecimento-text">
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore pariatur asperiores incidunt quod, sed aspernatur eos commodi ex nostrum consequuntur aut vero cum illum perferendis earum, eveniet hic itaque. Quod.</p>
+                </div>
+              </div>
+              <div class="conhecimento">
+                <div class="conhecimento-header">
+                  <i class="fas fa-pencil-alt"></i>
+                  <h3>Design</h3>
+                </div>
+                <div class="conhecimento-text">
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa ex eius voluptatem deleniti alias commodi doloremque aspernatur id adipisci quia ea, distinctio maxime, at nemo. Officiis suscipit excepturi quia aut?</p>
+                </div>
+              </div>
+              <div class="conhecimento">
+                <div class="conhecimento-header">
+                  <i class="fab fa-js"></i>
+                  <h3>Javascript</h3>
+                </div>
+                <div class="conhecimento-text">
+                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam quas facere alias, reprehenderit ullam quibusdam itaque dolor nulla odio inventore culpa molestiae porro ea ad illo, quos dicta ratione quisquam?
+                  </p>
+                </div>
+              </div>
+              <div class="conhecimento">
+                <div class="conhecimento-header">
+                  <i class="fab fa-bootstrap"></i>
+                  <h3>Boostrap</h3>
+                </div>
+                <div class="conhecimento-text">
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae sequi, quas illo dolor totam voluptas pariatur harum blanditiis veritatis culpa doloremque aspernatur nesciunt dicta iure fuga similique ad, ut impedit.</p>
+                </div>
+              </div>
+              <div class="conhecimento">
+                <div class="conhecimento-header">
+                  <i class="fab fa-github"></i>
+                  <h3>Git e GitHub</h3>
+                </div>
+                <div class="conhecimento-text">
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet facilis distinctio quaerat eaque ratione, molestias incidunt a iusto, unde quos magnam ullam exercitationem velit alias, fuga in explicabo ex laborum!</p>
+                </div>
+              </div>
+              <div class="conhecimentos-img-wrapper">
+                <img src="imagens/conhecimentos.png" alt="imagem conhecimento">
+              </div>
+            </div>
+          </section>
+
+          <section class="sessao-projetos">
+                <div class="sessao-header">
+                    <h1>Projetos</h1>
+                </div>
+                <div>
+                <div class="projetos">
+                    <div class="card">
+                        <div class="card-img-wrapper">
+                            <img src="imagens/proj1.jpg" alt="Imagem do projeto todo" />
+                        </div>
+                        <div class="card-info">
+                            <h2>ToDo List</h2>
+                            <h3>Javascript</h3>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit optio possimus asperiores velit totam dolores magni quos voluptate, cum quo eligendi fugiat aspernatur sapiente voluptatibus saepe molestiae rerum aut quod.</p>
+                            <button>Saiba Mais</button>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img-wrapper">
+                            <img src="imagens/proj2.jpg" alt="imagem do projeto Maratona" />
+                        </div>
+                        <div class="card-info">
+                            <h2>Maratona</h2>
+                            <h3>HTML, CSS</h3>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam vero eligendi excepturi quisquam, quia nisi cumque saepe. Repellat nostrum quae eligendi inventore beatae consequuntur, nihil distinctio ad aliquid ex officiis.</p>
+                            <button>Saiba Mais</button>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img-wrapper">
+                            <img src="imagens/proj3.jpg" alt="Imagem do projeto Casa Bela" />
+                        </div>
+                        <div class="card-info">
+                            <h2>Casa Bela</h2>
+                            <h3>HTML</h3>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero nihil praesentium nam amet, animi magnam? Et deleniti, suscipit porro repudiandae sed aspernatur nihil laborum animi facilis reprehenderit esse sit debitis.</p>
+                            <button>Saiba Mais</button>
+                        </div>
+                    </div>
+                </div>
+
+                </div>
+          </section>
+
+          <section class="sessao-contato" id="contato">
+            <div class="contato-wrapper">
+              <div class="contato-left"></div>
+              <div class="contato-right">
+                <h1>Contato</h1>
+                <form>
+                  <div class="input-group">
+                    <input type="text" class="field" id="nome">
+                    <label for="nome" class="field-label">Nome</label>
+                  </div>
+                  <div class="input-group">
+                    <input type="text" class="field" id="email">
+                    <label for="email" class="field-label">E-mail</label>
+                  </div>
+                  <div class="input-group">
+                    <textarea class="field" id="mensagem"></textarea>
+                    <label for="mensagem" class="field-label">Mensagem</label>
+                  </div>
+                  <button type="submit" class="btn btn-submit">Enviar</button>
+                </form>
+              </div>
+            </div>
+          </section>
+
     </div>
-
 </body>
-
     <script src="script.js"></script>
 </html>
